.infra/k8s/client-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-depl
spec:
  selector:
    matchLabels:
      app: client-depl
  template:
    metadata:
      labels:
        app: client-depl
    spec:
      containers:
      - name: client-depl
        image: matfij/nw-client
---
apiVersion: v1
kind: Service
metadata:
  name: client-srv
spec:
  selector:
    app: client-depl
  ports:
  - port: 3000
    targetPort: 3000
