.infra/k8s/expiration-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expiration-depl
spec:
  selector:
    matchLabels:
      app: expiration-depl
  template:
    metadata:
      labels:
        app: expiration-depl
    spec:
      containers:
      - name: expiration-depl
        image: matfij/nw-expiration
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expiration-db-depl
spec:
  selector:
    matchLabels:
      app: expiration-db-depl
  template:
    metadata:
      labels:
        app: expiration-db-depl
    spec:
      containers:
      - name: expiration-db-depl
        image: redis
---
apiVersion: v1
kind: Service
metadata:
  name: expiration-db-srv
spec:
  selector:
    app: expiration-db-depl
  ports:
  - port: 6379
    targetPort: 6379
