.infra/k8s/orders-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-depl
spec:
  selector:
    matchLabels:
      app: orders-depl
  template:
    metadata:
      labels:
        app: orders-depl
    spec:
      containers:
        - name: orders-depl
          image: matfij/nw-orders
---
apiVersion: v1
kind: Service
metadata:
  name: orders-srv
spec:
  selector:
    app: orders-depl
  ports:
    - port: 3000
      targetPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-db-depl
spec:
  selector:
    matchLabels:
      app: orders-db-depl
  template:
    metadata:
      labels:
        app: orders-db-depl
    spec:
      containers:
        - name: orders-db-depl
          image: mongo
---
apiVersion: v1
kind: Service
metadata:
  name: orders-db-srv
spec:
  selector:
    app: orders-db-depl
  ports:
    - port: 27017
      targetPort: 27017
