.infra/k8s/payments-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payments-depl
spec:
  selector:
    matchLabels:
      app: payments-depl
  template:
    metadata:
      labels:
        app: payments-depl
    spec:
      containers:
      - name: payments-depl
        image: matfij/nw-payments
---
apiVersion: v1
kind: Service
metadata:
  name: payments-srv
spec:
  selector:
    app: payments-depl
  ports:
  - port: 3000
    targetPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payments-db-depl
spec:
  selector:
    matchLabels:
      app: payments-db-depl
  template:
    metadata:
      labels:
        app: payments-db-depl
    spec:
      containers:
      - name: payments-db-depl
        image: mongo
---
apiVersion: v1
kind: Service
metadata:
  name: payments-db-srv
spec:
  selector:
    app: payments-db-depl
  ports:
  - port: 27017
    targetPort: 27017
